# GPTree

./: .gitignore  LICENCE  README.md  capi.cpp  capi.h  meson.build  pyzkdtree.pyx  run_test.cpp  test_api.py  tree.hpp  zkdtree_build.cpp  zkdtree_describe.cpp
conda-recipe/: build.sh  meta.yaml  run_test.sh
include/: capi.h
test_data/: rdata.txt
